# InterWall

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh
src/: animation.c  animation.h  common.h  main.c  window.c  window.h
